// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleSearchComponent /> should appear a clearSearch button when the input value is not empty, and should handle clearSearch() on click 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-simpleSearch ">
  <input
    type="text"
    class="as-simpleSearch__input "
    placeholder=""
    autofocus={false}
    onInput={[Function anonymous]}
    value="Some query text..."
   />
  <div
    class="as-simpleSearch__clearSearch "
    onClick={[Function anonymous]}
  >
    <div>x</div>
  </div>
</div>

`;

exports[`<SimpleSearchComponent /> should render new html properties when "htmlNodeInheritProps" are passed 1`] = `
preact-render-spy (1 nodes)
-------
<input
  type="text"
  class="some-class-name"
  placeholder=""
  autofocus={false}
  data-apisearch="apisearch-search-bar"
  id="some-id"
  autocomplete="off"
  spellcheck={0}
  onInput={[Function anonymous]}
  value=""
 />

`;

exports[`<SimpleSearchComponent /> should render only the input when "withContainer" property is set to false 1`] = `
preact-render-spy (1 nodes)
-------
<input
  type="text"
  class="as-simpleSearch__input "
  placeholder=""
  autofocus={false}
  onInput={[Function anonymous]}
  value=""
 />

`;

exports[`<SimpleSearchComponent /> should render with custom props 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-simpleSearch custom-container-class">
  <input
    type="text"
    class="as-simpleSearch__input undefined"
    placeholder="Type something..."
    autofocus={false}
    onInput={[Function anonymous]}
    value=""
   />
</div>

`;

exports[`<SimpleSearchComponent /> should render with default props 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-simpleSearch ">
  <input
    type="text"
    class="as-simpleSearch__input "
    placeholder=""
    autofocus={false}
    onInput={[Function anonymous]}
    value=""
   />
</div>

`;
